--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <script src="https://wzrd.in/standalone/expect@latest"></script >
 <script src="https://wzrd.in/standalone/deep-freeze@latest"></script >
 <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.5.1/redux.min.js"></script>
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<script src="https://fb.me/react-0.14.0.js"></script>
+<script src="https://fb.me/react-dom-0.14.0.js"></script>
 <script src="./TodoApp.js"></script >
 </head>
 <body>
-	<div id='root'><>
+	<div id='root'>
 </body>
 </html>
